# task_2

./: .gitignore  staff.db
SMClient/: AddEmploeeHandler.cpp  AddEmploeeHandler.h  BaseHandler.h  CMakeLists.txt  DelEmploeeHandler.cpp  DelEmploeeHandler.h  EmploeeListHandler.cpp  EmploeeListHandler.h  GetChiefHandler.cpp  GetChiefHandler.h  MessageHandler.cpp  MessageHandler.h  SetChiefHandler.cpp  SetChiefHandler.h  SetPositionHandler.cpp  SetPositionHandler.h  main.cpp
SMServer/: CMakeLists.txt  DBHandler.cpp  DBHandler.h  MessageHandler.cpp  MessageHandler.h  main.cpp
